--- a/style.css
+++ b/style.css
@@ -11,6 +11,50 @@ body{
 }
 
 .container{
-    background-color: hsla(256, 72%, 46%, 1);
-    max-width: 800px;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color:  hsl(241, 81%, 54%);
+    max-width: 600px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    height: auto;
+
 }
+
+.left-card{
+    color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+
+}
+
+.number{
+    background-color: rgba(2, 9, 73, 0.24);
+    text-align: center;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.score{
+    font-size: 50px;
+}
+
+.result{
+    font-weight: 600;
+    color:hsla(222, 100%, 96%, 0.692)
+}
+p{
+text-align: center;
+}
+
+
+
