--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: "Hanken Grotesk", serif;
 }
 
 body{
@@ -8,8 +9,8 @@ body{
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-
 }
+
 
 .container{
     font-family: Arial, Helvetica, sans-serif;
@@ -31,6 +32,7 @@ body{
     justify-content: center;
     padding: 40px;
     border-radius: 20px;
+
 }
 
 .number{
